2008-02-02  Johannes Schmid <jhs@gnome.org>

	* manuals/anjuta-manual/Makefile.am:
	Fixed #513888 – Trailing '\' in anjuta-manual/Makefile.am 
	causes make install to fail

2008-02-02  Johannes Schmid <jhs@gnome.org>

	* plugins/macro/macros.xml:
	#495511 – Header_h macro correction

2008-02-02  Johannes Schmid <jhs@gnome.org>

	* plugins/patch/patch-plugin.glade:
	gtk-apply is not translatable...

2008-02-02  Johannes Schmid <jhs@gnome.org>

	* plugins/build-basic-autotools/build-basic-autotools.c:
	(on_build_mesg_format):
	
	Also check for untranslated messages from make. Should fix 
	#511981 – Error parsing make output

2008-02-02  Johannes Schmid <jhs@gnome.org>

	* plugins/build-basic-autotools/anjuta-build-basic-autotools-plugin
	.glade:
	
	Fixed #511010 – [UI] Execute program utility window

2008-02-02  Johannes Schmid <jhs@gnome.org>

	* src/anjuta.glade:
	Fixed #509908 – [UI] Problems with the General settings tab

2008-02-02  Johannes Schmid <jhs@gnome.org>

	* manuals/anjuta-manual/C/fileoperations.xml:
	Fixed #513730 – Option not present in the GUI po file

2008-02-02  Johannes Schmid <jhs@gnome.org>

	* plugins/sourceview/anjuta-editor-sourceview.glade:
	Adjust preferences default values

2008-02-02  Johannes Schmid <jhs@gnome.org>

	* plugins/document-manager/plugin.c: (docman_plugin_set_tab_pos):
  Fixed #512535 – Open files tabs' position is correctly remembered 
  but not applied at startup

2008-02-02  Johannes Schmid <jhs@gnome.org>

	* plugins/search/search-replace.c: (on_message_clicked):
	Pass and uri ianjuta_document_manager_goto_file_line_mark() to
	fix clicking on search result messages

2008-02-01  James Liggett <jrliggett@cox.net>
 
  * plugins/subversion/svn-command.c: (on_svn_notify):
  Fixed wrong status message output when resolving conflicts.

2008-02-02  Johannes Schmid <jhs@gnome.org>

	* configure.in: Require GtkSourceView 2.1.2
	* plugins/sourceview/sourceview-prefs.c: (init_colors_and_fonts):